# selinux-policy

./: .gitignore  .gitmodules  .travis.yml  INSTALL  Makefile  README  README-BUILD.md  README.md  Rules.modular  Rules.monolithic  abrt.fc  abrt.if  abrt.te  accountsd.fc  accountsd.if  accountsd.te  acct.fc  acct.if  acct.te  ada.te  afs.fc  afs.if  afs.te  aiccu.if  aiccu.te  aide.fc  aide.if  aide.te  aisexec.fc  aisexec.if  aisexec.te  ajaxterm.te  alsa.fc  alsa.if  alsa.te  amanda.fc  amanda.if  amanda.te  amavis.fc  amavis.if  (+1223 more)
.copr/: .gitignore  Makefile  make-srpm.sh
.github/workflows/: build.yml  checks.yml
config/: booleans.subs_dist  file_contexts.subs_dist
config/appconfig-mcs/: guest_u_default_contexts  securetty_types  seusers  staff_u_default_contexts  sysadm_u_default_contexts  unconfined_u_default_contexts  user_u_default_contexts  userhelper_context  xguest_u_default_contexts
config/appconfig-mls/: guest_u_default_contexts  securetty_types  snapperd_contexts  staff_u_default_contexts  systemd_contexts  user_u_default_contexts
config/appconfig-standard/: guest_u_default_contexts  lxc_contexts  openssh_contexts  staff_u_default_contexts  sysadm_u_default_contexts  unconfined_u_default_contexts  user_u_default_contexts  virtual_domain_context  xguest_u_default_contexts
doc/: example.te
framework/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  org.fedoraproject.SetroubleshootFixit.conf  org.fedoraproject.SetroubleshootFixit.service  org.fedoraproject.Setroubleshootd.conf  org.fedoraproject.Setroubleshootd.service  org.fedoraproject.setroubleshootfixit.policy  sealert.service  sealertauto.desktop  setroubleshoot.desktop  setroubleshoot.desktop.in  setroubleshoot.init  setroubleshoot.logrotate.in
framework/autom4te.cache/: output.0  requests  traces.0  traces.1
framework/doc/: Makefile.am  Makefile.in  audit_notes.txt  developers_guide.wiki  sealert.8  sedispatch.8  setroubleshoot_selinux_symposium.doc  setroubleshootd.8  user_faq.wiki
framework/gui/: Makefile.am  Makefile.in  browser.glade  browser.glade.new  browser.glade.old  browser.py  bug_report.glade  database.xsl  fail_dialog.glade  success_dialog.glade
framework/po/: POTFILES.in  POTFILES.skip  as.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  gu.po  hi.po  hr.po  hu.po  it.po  ja.po  kn.po  ko.po  mai.po  ml.po  mr.po  ms.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sr@latin.po  sv.po  ta.po  te.po  th.po  uk.po  (+3 more)
framework/src/: '  .browse.py.swp  .cvsignore  Makefile.am  Makefile.in  Plugin.py  SetroubleshootFixit.py  __init__.py  access_control.py  analyze.py  audit_data.py  avc_audit.py  booleans.py  browse.py  browse.py.old  browser.py  browser.py.lol  config.py.in  email_alert.py  email_dialog.py  errcode.py  gui_utils.py  html_util.py  log.py  rpc.py  rpc_interfaces.py  run_cmd.py  sdfasfd.py  sealert  seapplet.c  sedbus.c  sedbus.h  sedispatch.c  sedispatch.conf  server.py  setroubleshoot.cfg  setroubleshoot_upgrade  setroubleshootd  signature.py  test  (+5 more)
framework/src/default_encoding/: Makefile.am  Makefile.in  setup.py
framework/src/sesearch/: Makefile.am  Makefile.in  __init__.py  sesearch.c  sesearch_wrapper.c  setup.py
framework/test/: Makefile.in  README.testing  audisp_listen  client_rpc.py  test_setroubleshootd  testlogs  testout
man/man8/: NetworkManager_selinux.8  abrt_dump_oops_selinux.8  abrt_handle_event_selinux.8  abrt_helper_selinux.8  abrt_retrace_coredump_selinux.8  abrt_retrace_worker_selinux.8  abrt_selinux.8  abrt_watch_log_selinux.8  accountsd_selinux.8  acct_selinux.8  admin_crontab_selinux.8  afs_bosserver_selinux.8  afs_fsserver_selinux.8  afs_kaserver_selinux.8  afs_ptserver_selinux.8  afs_selinux.8  afs_vlserver_selinux.8  aiccu_selinux.8  aide_selinux.8  aisexec_selinux.8  ajaxterm_selinux.8  ajaxterm_ssh_selinux.8  alsa_selinux.8  amanda_recover_selinux.8  amanda_selinux.8  amavis_selinux.8  amtu_selinux.8  anaconda_selinux.8  anon_sftpd_selinux.8  apache_selinux.8  apcupsd_selinux.8  apm_selinux.8  apmd_selinux.8  arpwatch_selinux.8  asterisk_selinux.8  audisp_remote_selinux.8  audisp_selinux.8  auditadm_dbusd_selinux.8  auditadm_gkeyringd_selinux.8  auditadm_screen_selinux.8  (+744 more)
plans/: cockpit-machines.fmf  cockpit.fmf
plugins/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac
plugins/autom4te.cache/: output.1  requests  traces.0  traces.1
plugins/po/: POTFILES.in  am.po  as.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  fi.po  fr.po  gu.po  hi.po  hr.po  hu.po  it.po  ja.po  kn.po  ko.po  ml.po  mr.po  ms.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sr@latin.po  sv.po  ta.po  te.po  uk.po  zh_CN.po  zh_TW.po
plugins/src/: Makefile.am  Makefile.am.orig  Makefile.am.rej  Makefile.in  allow_anon_write.py  allow_execheap.py  allow_execmod.py  allow_execstack.py  allow_ftpd_use_cifs.py  allow_ftpd_use_nfs.py  automount_exec_config.py  bind_ports.py  catchall.py  catchall_boolean.py  catchall_labels.py  connect_ports.py  cvs_data.py  device.py  disable_ipv6.py  file.py  filesystem_associate.py  httpd_can_sendmail.py  httpd_unified.py  httpd_write_content.py  kernel_modules.py  leaks.py  mmap_zero.py  mounton.py  public_content.py  qemu_blk_image.py  qemu_file_image.py  restorecon.py  rsync_data.py  samba_share.py  selinuxpolicy.py  setenforce.py  sshd_root.py  swapfile.py  sys_module.py  sys_resource.py  (+3 more)
plugins/tools/: missing_plugins  plugins.py
policy/: constraints  global_booleans  global_tunables  mcs  mls  modules.conf  policy_capabilities  users
policy/flask/: Makefile  access_vectors  flask_documentation.md  security_classes
policy/modules/admin/: accountsd.if  (+85 more)
policy/support/: file_patterns.spt  loadable_module.spt  misc_macros.spt  misc_patterns.spt  obj_perm_sets.spt
scripts/: make-sources.sh  make-srpm.sh
support/: Makefile.devel  fc_sort.c  pyplate.py  sedoctool.py  segenxml.py
test/: test-systemd-homed.sh
(+1950 files in other folders)
