DOC_FILES =					\
	setroubleshoot_architecture.svg		\
	setroubleshoot_dataflow.svg		\
	setroubleshoot_modes.svg		\
	setroubleshoot_selinux_symposium.pdf	\
	$(NULL)

man_MANS =					\
	sealert.8				\
	setroubleshootd.8			\
	sedispatch.8				\
	$(NULL)

pkgdoc_DATA = $(DOC_FILES)

EXTRA_DIST =					\
	$(DOC_FILES)				\
	$(man_MANS)				\
	$(NULL)
